--- a/gnome-base/gnome-core/ChangeLog
+++ b/gnome-base/gnome-core/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for gnome-base/gnome-core
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/ChangeLog,v 1.6 2002/04/23 16:45:56 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/ChangeLog,v 1.7 2002/04/29 20:25:03 azarah Exp $
+
+*gnome-core-1.4.0.8 (29 Apr 2002)
 
 *gnome-core-1.4.0.7 (23 Apr 2002)
   23 Apr 2002; Spider <spider@gentoo.org> gnome-core-1.4.0.7.ebuild :
