--- a/net-www/netscape-flash/ChangeLog
+++ b/net-www/netscape-flash/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/netscape-flash
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.2 2002/02/17 17:48:25 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.3 2002/04/29 21:38:53 verwilst Exp $
+
+*netscape-flash-5.0.48 (29 April 2002)
+
+  29 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
+  
+  New version, removed older 5.0.x version.
 
 *netscape-flash-5.0.47-r4 (17 Feb 2002)
 
