--- a/net-analyzer/lcrzoex/ChangeLog
+++ b/net-analyzer/lcrzoex/ChangeLog
@@ -1,30 +1,16 @@
 # ChangeLog for net-analyzer/lcrzoex
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/lcrzoex/ChangeLog,v 1.5 2002/04/16 17:22:08 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/lcrzoex/ChangeLog,v 1.6 2002/04/30 03:30:24 woodchip Exp $
+
+*lcrzoex-4.09 (29 Apr 2002)
 
 *lcrzoex-4.08 (16 Apr 2002)
 
-  16 Apr 2002; Donny Davies <woodchip@gentoo.org> :
-
-  Updated to latest release.
-
 *lcrzoex-4.07 (3 Apr 2002)
-
-  3 Apr 2002; Donny Davies <woodchip@gentoo.org> :
-
-  Updated to latest release.
 
 *lcrzoex-4.06 (20 March 2002)
 
-  20 March 2002; Donny Davies <woodchip@gentoo.org> :
-
-  Updated to latest release.
-
 *lcrzoex-4.05 (24 Feb 2002)
-
-  24 Feb 2002; Donny Davies <woodchip@gentoo.org> :
-
-  Updated to latest release.
 
 *lcrzoex-4.03 (1 Feb 2002)
 
