--- a/app-text/xpdf/ChangeLog
+++ b/app-text/xpdf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/xpdf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.2 2002/02/02 21:21:22 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.3 2002/04/30 07:17:42 kain Exp $
+
+*xpdf-1.00-r1 (30 Apr 2002)
+
+  30 Apr 2002; Kain <kain@kain.org> ChangeLog, xpdf-1.00-r1.ebuild :
+  
+  Included a FreeType 2.1 compatibility fix.
 
 *xpdf-1.00 (2 Feb 2002)
 
