--- a/app-text/gmanedit/ChangeLog
+++ b/app-text/gmanedit/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for app-text/gmanedit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/gmanedit/ChangeLog,v 1.1 2002/02/01 21:53:10 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gmanedit/ChangeLog,v 1.2 2002/04/30 08:29:28 seemant Exp $
+
+*gmanedit-0.3.3-r2 (30 Apr 2002)
+
+  30 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gmanedit-0.3.3-r2.ebuild
+  files/digest-gmanedit-0.3.3-r2 :
+
+  luke@dslextreme.com (Luke Ravitch) submitted a patch so that the configure
+  script can find gtk-config.  Funny thing is this patch was just a reversal
+  of Hallski's original patch.  So now, the configure script remains unpatched
+  and the DEPEND only needs gnome-libs not gnome-core.  Also, general ebuild
+  cleanup.
 
 *gmanedit-0.3.3-r1 (1 Feb 2002)
 
