--- a/media-video/avifile/ChangeLog
+++ b/media-video/avifile/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-video/avifile
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.11 2002/04/29 03:57:12 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.12 2002/04/30 09:49:50 seemant Exp $
+
+*avifile-0.7.4-20020426 (20 Apr 2002)
+
+  30 Apr 2002; Seemant Kulleen <seemant@gentoo.org> avifile-0.7.4-20020426.ebuild
+  files/digest-avifile-0.7.4-20020426 :
+
+  Version bump to newest snapshot.  Upstream claims this is a bugfix release.
 
 *avifile-0.7.3.20020419-r1 (28 Apr 2002)
 
