--- a/net-analyzer/geotrace/ChangeLog
+++ b/net-analyzer/geotrace/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/geotrace
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/geotrace/ChangeLog,v 1.1 2002/02/17 21:27:40 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/geotrace/ChangeLog,v 1.2 2002/04/30 09:54:16 seemant Exp $
+
+  30 Apr 2002; Seemant Kulleen <seemant@gentoo.org> geotrace-0.0.4.ebuild :
+
+  gayeski@cae.wisc.edu (Michael Gayeski) in bug #2220 suggested that 
+  traceroute be made a run-time dependency, which makes sense.
 
 *geotrace-0.0.4 (17 Feb 2002)
 
