--- a/kde-base/kdemultimedia/ChangeLog
+++ b/kde-base/kdemultimedia/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.3 2002/04/05 09:07:10 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.4 2002/04/30 11:45:11 danarmak Exp $
+
+*kdemultimedia-3.0-r1 (30 Apr 2002)
+
+  30 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  Fixed files from kmidi/config installing into /var/tmp/portage/.../$KDEDIR.
+  Fixes bug #2095.
 
   5 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog:
   
