--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.4 2002/04/24 14:54:25 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.5 2002/04/30 12:10:59 seemant Exp $
 
+*balsa-1.3.5 (30 Apr 2002)
+
+  30 Apr 2002; Seemant Kulleen <seemant@gentoo.org> balsa-1.3.5.ebuild
+  files/digest-balsa-1.3.5 :
+
+  Version bump, with dependency fixes (no gnome-core dep any more!), and
+  man page/LFH compliance.
 
 *balsa-1.2.4-r1 (24 Apr 2002)
   24 Apr 2002; Spider <spider@gentoo.org> balsa-1.2.4-r1.ebuild balsa-1.3.4.ebuild
