--- a/sys-apps/evms/ChangeLog
+++ b/sys-apps/evms/ChangeLog
@@ -1,9 +1,16 @@
 # ChangeLog for sys-apps/evms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/evms/ChangeLog,v 1.1 2002/04/27 07:17:49 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/evms/ChangeLog,v 1.2 2002/04/30 17:31:06 woodchip Exp $
+
+*evms-1.0.0-r1 (30 Apr 2002)
+
+  30 Apr 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Moved the plugins to /lib/evms, where they belong.  Please unmerge the
+  older version of this package if you had it installed.
 
 *evms-1.0.0 (27 Apr 2002)
 
-  27 Apr 2002; Donny Davies <woodchip@gentoo.org> evms-1.0.0.ebuild :
+  27 Apr 2002; Donny Davies <woodchip@gentoo.org> :
 
   Made a package for IBM's Enterprise Volume Management System.
