--- a/kde-base/kdepim/ChangeLog
+++ b/kde-base/kdepim/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdepim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim/ChangeLog,v 1.2 2002/04/04 20:09:23 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim/ChangeLog,v 1.3 2002/04/30 19:38:56 danarmak Exp $
+
+*kdepim-3.0-r1 (30 Apr 2002)
+
+  30 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+  Fix bug #2259 (kpilot not being built); make kpilot building possible
+  and conditional on pda use flag
 
 *kdepim-3.0 (4 Apr 2002)
 
