--- a/x11-libs/qt/ChangeLog
+++ b/x11-libs/qt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.10 2002/04/18 08:01:59 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.11 2002/04/30 20:38:57 danarmak Exp $
+
+  30 Apr 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  Fix SRC_URI (but why'd it broke??)
 
 *qt-3.0.3.1 (18 Apr 2002)
 
