--- a/net-misc/dante/ChangeLog
+++ b/net-misc/dante/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-misc/dante
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dante/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dante/ChangeLog,v 1.2 2002/05/01 04:38:03 woodchip Exp $
+
+*dante-1.1.9-r1 (1 May 2002)
+
+  1 May 2002; Donny Davies <woodchip@gentoo.org> dante-1.1.9-r1.ebuild,
+  files/dante-sockd-init :
+
+  Added tcp-wrappers to DEPEND.  Syntax cleanup.  Added initscript for sockd,
+  closing #2223.  Thanks to Per Wigren <wigren@home.se> for writing and
+  contributing the rc-script.
 
 *dante-1.1.9 (1 Feb 2002)
 
