--- a/net-misc/qtella/ChangeLog
+++ b/net-misc/qtella/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/qtella
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/qtella/ChangeLog,v 1.3 2002/04/01 22:38:44 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/qtella/ChangeLog,v 1.4 2002/05/01 11:34:22 verwilst Exp $
+
+*qtella-0.5.2 (1 May 2002)
+
+  1 May 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
+
+  Upgraded to 0.5.2.. This time this is more a bugfix release.. Enjoy!
 
 *qtella-0.5.1 (1 April 2002)
 
