--- a/sys-apps/pcmcia-cs/ChangeLog
+++ b/sys-apps/pcmcia-cs/ChangeLog
@@ -1,35 +1,57 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.10 2002/03/31 00:31:34 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.11 2002/05/01 13:01:29 karltk Exp $
 
-  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> : removed X support --
-  a much-requested change.  No rev bump.
+*pcmcia-cs-3.1.33-r4 (01 May 2002)
+
+  01 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> pcmcia-cs-3.1.33-r4.ebuild files/digest-pcmcia-cs-3.1.33-r4 :
+
+  Added new version of the orinoco_cs driver. The SMC2632W card now works
+  again.
+
+  Cleaned up this horrid ChangeLog somewhat.
+
+  Old revision kept, new revision masked, as the new orinoco driver 
+  hasn't recived adequate testing.
 
 *pcmcia-cs-3.1.33-r3,pcmcia-cs-3.1.31-r7 (28 Mar 2002)
-  28 Mar 2002; Chad Huneycutt <chadh@gentoo.org>
+
+  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> : 
+
+  removed X support, a much-requested change.  No rev bump.
+
+  28 Mar 2002; Chad Huneycutt <chadh@gentoo.org> :
+
   changed doins to doexe for installing the network script executably
 
-  28 Mar 2002; Chad Huneycutt <chadh@gentoo.org>
+  28 Mar 2002; Chad Huneycutt <chadh@gentoo.org> :
+
   typo in the stop code.
 
 *pcmcia-cs-3.1.33-r2, pcmcia-cs-3.1.31-r6 (19 Mar 2002)
-  19 Mar 2002; Chad Huneycutt <chadh@gentoo.org>
+
+  19 Mar 2002; Chad Huneycutt <chadh@gentoo.org> :
+
   hacked up the /etc/pcmcia/network script that cardmgr uses to start network
   iterfaces to call Gentoo's network init scripts
 
 *pcmcia-cs-3.1.33-r1 (18 Mar 2002)
-  18 Mar 2002; Chad Huneycutt <chadh@gentoo.org>
+
+  18 Mar 2002; Chad Huneycutt <chadh@gentoo.org> :
+
   newest version of pcmcia-cs
 
 *pcmcia-cs-3.1.31-r5 (14 Mar 2002)
 
-  14 Mar 2002; Karl Trygve Kalleberg <karltk@gentoo.org>: pcmcia-cs-3.1.31-r5:
+  14 Mar 2002; Karl Trygve Kalleberg <karltk@gentoo.org>: pcmcia-cs-3.1.31-r5.ebuild :
 
   The test for the nocardbus USE flag was reversed. Fixed.
 
 *pcmcia-cs-3.1.31-r4 (14 Mar 2002)
 
-  14 Mar 2002; Chad Huneycutt <chadh@gentoo.org>: many fixes:
+  14 Mar 2002; Chad Huneycutt <chadh@gentoo.org> : 
+
+  many fixes:
   1. added USE variables for trusted apps, apm, cardbus, and pnp
   2. updated init script to die slightly more gracefully when cardmgr
      cannot start
@@ -47,17 +69,21 @@
 
 *pcmcia-cs-3.1.31-r3 (05 Mar 2002)
 
-  05 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: properly install the pcmcia
-  rc script into /etc/init.d; add -f option to cardmgr so that it stays in the
-  foreground until it's done doing its thing.  This ensures that any network 
-  interfaces are set up after it detaches.  This closes bug #972.
+  05 Mar 2002; Daniel Robbins <drobbins@gentoo.org> : 
+
+  properly install the pcmcia rc script into /etc/init.d; add -f option 
+  to cardmgr so that it stays in the foreground until it's done doing its 
+  thing.  This ensures that any network interfaces are set up after it 
+  detaches.  This closes bug #972.
 
 *pcmcia-cs-3.1.31-r2 (10 Feb 2002)
 
-  10 Feb 2002; Daniel Robbins <drobbins@gentoo.org>: Configure --srctree option
-  added to tell pcmcia-cs to configure for kernel described in /usr/src/linux
-  rather than the currently-running kernel (which is otherwise the default).
-  We're now doing this the "right" way. 
+  10 Feb 2002; Daniel Robbins <drobbins@gentoo.org> : 
+
+  Configure --srctree option added to tell pcmcia-cs to configure for 
+  kernel described in /usr/src/linux rather than the currently-running 
+  kernel (which is otherwise the default). We're now doing this the "right"
+  way. 
 
 *pcmcia-cs-3.1.31-r1 (1 Feb 2002)
 
