--- a/net-mail/maildrop/ChangeLog
+++ b/net-mail/maildrop/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-mail/maildrop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/maildrop/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/maildrop/ChangeLog,v 1.2 2002/05/02 02:08:33 woodchip Exp $
+
+*maildrop-1.3.8 (1 May 2002)
+
+  1 May 2002; Donny Davies <woodchip@gentoo.org> maildrop-1.3.8.ebuild,
+  files/maildroprc :
+
+  Updated to latest release, added a system default maildroprc file,
+  added the documentation, added the development files, cleaned up
+  the /usr/share/maildrop dir, added SLOT and LICENSE.
 
 *maildrop-1.3.6 (1 Feb 2002)
 
