--- a/media-gfx/gnome-iconedit/ChangeLog
+++ b/media-gfx/gnome-iconedit/ChangeLog
@@ -1,7 +1,15 @@
 # ChangeLog for media-gfx/gnome-iconedit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gnome-iconedit/ChangeLog,v 1.3 2002/04/12 23:29:45 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gnome-iconedit/ChangeLog,v 1.4 2002/05/02 04:28:47 mkennedy Exp $
 
+*gnome-iconedit-1.2.0-r5 (1 May 2002)
+
+  12 Apr 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
+  gnome-iconedit-1.2.0-r5, files/gnome-iconedit-1.2.0-r5 :
+
+  Added -I/usr/include/gdk-pixbuf-1.0 per Martin Schlemmer suggestion
+  in bug #1929.
+	
 *gnome-iconedit-1.2.0-r4 (12 Apr 2002)
 
   12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> 
