--- a/net-mail/maildrop/ChangeLog
+++ b/net-mail/maildrop/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/maildrop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/maildrop/ChangeLog,v 1.2 2002/05/02 02:08:33 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/maildrop/ChangeLog,v 1.3 2002/05/02 18:49:15 woodchip Exp $
+
+*maildrop-1.3.8-r1 (2 May 2002)
+
+  2 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Zap -fomit-frame-pointer and -ffast-math from CFLAGS if present.
 
 *maildrop-1.3.8 (1 May 2002)
 
