--- a/media-video/realplayer/ChangeLog
+++ b/media-video/realplayer/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-video/realplayer
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/realplayer/ChangeLog,v 1.1 2002/02/01 21:53:31 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/realplayer/ChangeLog,v 1.2 2002/05/02 19:51:25 sandymac Exp $
+
+*realplayer-8-r2 (2 Mar 2002)
+
+  2 Mar 2002; William McArthur <sandymac@gentoo.org> realplayer-8-r2.ebuild :
+
+  Updated ebuild for Mozilla and added LICENSE. I also changed the files in
+  /opt/netscape/plugins/* to be symlinks.
 
 *realplayer-8-r1 (1 Feb 2002)
 
