--- a/net-misc/bind/ChangeLog
+++ b/net-misc/bind/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/bind
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bind/ChangeLog,v 1.3 2002/03/21 10:27:59 m0rpheus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bind/ChangeLog,v 1.4 2002/05/02 21:46:15 sandymac Exp $
+
+*bind-9.2.1 (2 May 2002)
+
+  2 May 2002; William McArthur <sandymac@gentoo.org> bind-9.2.1.ebuild:
+
+  New upstream bugfix release, I just bumped the ebuild file name and added
+  a LICENSE line.
 
 *bind-9.1.3-r7 (21 Mar 2002)
 
