--- a/media-video/nvidia-kernel/ChangeLog
+++ b/media-video/nvidia-kernel/ChangeLog
@@ -1,9 +1,14 @@
 # ChangeLog for media-video/nvidia-kernel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.2 2002/04/29 06:49:02 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.3 2002/05/03 06:59:50 agenkin Exp $
 
 *nvidia-kernel-1.0.2880-r1 (29 Apr 2002)
 
+  3 May 2002; Arcady Genkin <agenkin@thpoon.com>
+	nvidia-kernel-1.0.2800-r1.ebuild :
+
+  Make sure that Portage *does* set KV to something; bail out otherwise. ;^)
+	
   29 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: Changed NV_KV to KV and
   added a Portage dependency to ensure that KV is available.  Should fix some
   build problems.
