--- a/app-misc/krename/ChangeLog
+++ b/app-misc/krename/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/krename
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.1 2002/05/02 19:17:09 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.2 2002/05/03 07:26:37 danarmak Exp $
+
+*krename-2.2 (3 May 2002)
+
+  3 May 2002; Dan Armak <danarmak@gentoo.org> ChangeLog:
+  
+  New upstream version.
+  
 
 *krename-2.1-pre2 (2 May 2002)
 
