permanently disable java bindings since they don't compile at all. it's a known bug to be fixed (hopefully) in kde 3.0.1. ----------------------------------------------------------------------

--- a/kde-base/kdebindings/ChangeLog
+++ b/kde-base/kdebindings/ChangeLog
@@ -1,11 +1,13 @@
 # ChangeLog for kde-base/kdebindings
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebindings/ChangeLog,v 1.3 2002/04/12 19:07:06 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebindings/ChangeLog,v 1.4 2002/05/03 10:20:27 danarmak Exp $
 
+  3 May 2002; Dan Armak <danarmak@gentoo.org>
+  Disable java bindings compuilation. There's a known bug (acknowledged on kde.org)
+  to be fixed (hopefully) in 3.0.1.
 
   11 Apr 2002; Spider <spider@gentoo.org>
   Update all glib dependencies to use glib-1.2*  in preparation of unmasking the glib-2.0.1 packages
-
 
 *kdebindings-3.0 (4 Apr 2002)
 
