--- a/net-www/w3m/ChangeLog
+++ b/net-www/w3m/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/w3m
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.2 2002/04/26 17:59:19 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.3 2002/05/03 13:08:17 pvdabeel Exp $
+
+*w3m-0.3-r1, w3m-0.2.2-r1 (03 May 2002)
+
+    03 May 2002; pvdabeel <pvdabeel@gentoo.org>	w3m-0.3-r1.ebuild, w3m-0.2.2-r1 :
+	ppc fix
 
 *w3m-0.3 (26 Apr 2002)
 
