--- a/sys-apps/fileutils/ChangeLog
+++ b/sys-apps/fileutils/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/fileutils
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/fileutils/ChangeLog,v 1.2 2002/03/31 00:12:34 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/fileutils/ChangeLog,v 1.3 2002/05/03 20:37:22 drobbins Exp $
+
+*fileutils-4.1.8-r1 (02 May 2002)
+
+  02 May 2002; Daniel Robbins <drobbins@gentoo.org>: Added ACL support, closing
+  bug #2343 (USE="acl" must be set)
 
 *fileutils-4.1.8 (30 Mar 2002)
 
