--- a/net-mail/procmail/ChangeLog
+++ b/net-mail/procmail/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/procmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/ChangeLog,v 1.2 2002/05/04 01:15:49 jhhudso Exp $
+
+*procmail-3.22-r1 (1 Feb 2002)
+  3 May 2002; J.Hudson <jhhudso@gentoo.org> procmail-3.22-r1.ebuild :
+
+  Added mbox use item to ebuild. When used, procmail will not change
+  the location of mail spool to a maildir style location. Instead, it
+  will use the /var/spool/mail/* default.
 
 *procmail-3.22 (1 Feb 2002)
 
