--- a/dev-util/ebuilder/ChangeLog
+++ b/dev-util/ebuilder/ChangeLog
@@ -1,9 +1,15 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
+# ChangeLog for dev-util/ebuilder
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/ebuilder/ChangeLog,v 1.1 2002/04/25 14:30:20 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/ebuilder/ChangeLog,v 1.2 2002/05/04 01:20:48 karltk Exp $
+
+*ebuilder-0.3 (04 May 2002)
+
+  04 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ebuilder-0.3.ebuild files/digest-ebuilder-0.3 :
+
+  New upstream version.
 
 *ebuilder-0.2 (25 Apr 2002)
 
-  25 Apr 2002; Grant Goodyear <g2boojum@gentoo.org> :
+  25 Apr 2002; Grant Goodyear <g2boojum@gentoo.org> ebuilder-0.2.ebuild files/digest-ebuilder-0.2 :
   
   Initial import.
