--- a/app-admin/fwanalog/ChangeLog
+++ b/app-admin/fwanalog/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/fwanalog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/fwanalog/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/fwanalog/ChangeLog,v 1.2 2002/05/04 01:22:36 woodchip Exp $
+
+*fwanalog-0.4-r2 (3 May 2002)
+
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Add LICENSE, SLOT.
 
 *fwanalog-0.4-r1 (1 Feb 2002)
 
