--- a/app-admin/msyslog/ChangeLog
+++ b/app-admin/msyslog/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/msyslog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/msyslog/ChangeLog,v 1.2 2002/03/11 22:40:52 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/msyslog/ChangeLog,v 1.3 2002/05/04 01:22:36 woodchip Exp $
+
+*msyslog-1.08a-r2 (3 May 2002)
+
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Add LICENSE, SLOT, $Headers.
 
 *msyslog-1.08a-r1 (1 Feb 2002)
 
