--- a/app-misc/kstars/ChangeLog
+++ b/app-misc/kstars/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/kstars
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/kstars/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/kstars/ChangeLog,v 1.2 2002/05/04 01:22:37 woodchip Exp $
+
+*kstars-0.6-r1 (3 May 2002)
+
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Add LICENSE, SLOT.
 
 *kstars-0.6-r1 (1 Feb 2002)
 
