--- a/dev-db/mysqltool/ChangeLog
+++ b/dev-db/mysqltool/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/mysqltool
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysqltool/ChangeLog,v 1.1 2002/04/18 00:30:53 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysqltool/ChangeLog,v 1.2 2002/05/04 01:58:36 woodchip Exp $
+
+*mysqltool-0.95-r1 (3 May 2002)
+
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Added LICENSE, SLOT.
 
 *mysqltool-0.95 (17 Apr 2002)
 
@@ -8,3 +14,4 @@
 
   Created an ebuild for mysqltool, a perl-based frontend for administering
   MySQL servers.  Similiar to phpMyAdmin.
+
