--- a/dev-perl/CGI/ChangeLog
+++ b/dev-perl/CGI/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/CGI
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/ChangeLog,v 1.1 2002/02/01 21:53:11 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/ChangeLog,v 1.2 2002/05/04 02:45:39 woodchip Exp $
+
+*CGI-2.78-r1 (3 May 2002)
+  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :          
+
+  Added LICENSE, SLOT.
 
 *CGI-2.78 (1 Feb 2002)
 
