--- a/media-sound/freeamp/ChangeLog
+++ b/media-sound/freeamp/ChangeLog
@@ -1,9 +1,17 @@
 # ChangeLog for media-sound/freeamp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/freeamp/ChangeLog,v 1.2 2002/04/12 17:15:30 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/freeamp/ChangeLog,v 1.3 2002/05/04 02:58:22 woodchip Exp $
+
+*freeamp-2.1.1-r1 (3 May 2002)
+  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Added LICENSE, SLOT.
 
 *freeamp-2.1.1 (11 Apr 2002) 
-  11 Apr 2002; Spider <spider@gentoo.org>
+
+  11 Apr 2002; Spider <spider@gentoo.org> :
+
   Created changelog entry. (shame on whoever missed it when updating ;)
   update glib dependency
   
