--- a/net-analyzer/lcrzoex/ChangeLog
+++ b/net-analyzer/lcrzoex/ChangeLog
@@ -1,8 +1,14 @@
 # ChangeLog for net-analyzer/lcrzoex
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/lcrzoex/ChangeLog,v 1.6 2002/04/30 03:30:24 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/lcrzoex/ChangeLog,v 1.7 2002/05/04 03:16:38 woodchip Exp $
 
-*lcrzoex-4.09 (29 Apr 2002)
+*lcrzoex-4.09-r1 (3 May 2002)
+  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Added LICENSE, SLOT.
+
+*lcrzoex-4.09 (28 Apr 2002)
 
 *lcrzoex-4.08 (16 Apr 2002)
 
