--- a/net-analyzer/ucd-snmp/ChangeLog
+++ b/net-analyzer/ucd-snmp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/ucd-snmp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ucd-snmp/ChangeLog,v 1.2 2002/02/13 00:26:39 m0rpheus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ucd-snmp/ChangeLog,v 1.3 2002/05/04 03:16:38 woodchip Exp $
+
+*ucd-snmp-4.2.3-r1 (3 May 2002)
+  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Added LICENSE, SLOT.
 
 *ucd-snmp-4.2.3 (13 Feb 2002)
 
