--- a/net-ftp/lukemftp/ChangeLog
+++ b/net-ftp/lukemftp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/lukemftp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/lukemftp/ChangeLog,v 1.1 2002/02/01 21:53:32 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lukemftp/ChangeLog,v 1.2 2002/05/04 03:42:50 woodchip Exp $
+
+*lukemftp-1.5-r3 (3 May 2002)
+  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Added LICENSE, SLOT.
 
 *lukemftp-1.5-r2 (1 Feb 2002)
 
