--- a/net-misc/linesrv/ChangeLog
+++ b/net-misc/linesrv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/linesrv
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/linesrv/ChangeLog,v 1.1 2002/02/01 21:53:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/linesrv/ChangeLog,v 1.2 2002/05/04 04:11:14 woodchip Exp $
+
+*linesrv-2.1.6-r1 (3 May 2002)
+  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Added LICENSE, SLOT.
 
 *linesrv-2.1.6 (1 Feb 2002)
 
