--- a/net-misc/guarddog/ChangeLog
+++ b/net-misc/guarddog/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/guarddog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/guarddog/ChangeLog,v 1.1 2002/02/01 21:53:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/guarddog/ChangeLog,v 1.2 2002/05/04 09:09:25 verwilst Exp $
+
+*guarddog-1.9.15 (4 May 2002)
+
+- 4 May 2002; B.Verwilst <verwilst@gentoo.org Changelog :
+
+  Added 1.9.15 (release candidate of Guarddog), is now KDE 3 app..
+  For KDE 2.x users, 1.9.14 is still KDE 2 enabled.   
+
 
 *guarddog-1.9.10 (1 Feb 2002)
 
