--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.10 2002/04/30 11:46:59 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.11 2002/05/04 10:03:13 danarmak Exp $
+
+*kdebase-3.0-r3 (4 May 2002)
+
+  4 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+  
+  Fix bug #1978 ($KDEDIR/share/templates/.soure/emptydir disappearing on remerge).
 
 *kdebase-3.0-r2 (30 Apr 2002)
 
