--- a/app-misc/celestia/ChangeLog
+++ b/app-misc/celestia/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-misc/celestia
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/celestia/ChangeLog,v 1.1 2002/04/13 12:22:11 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/celestia/ChangeLog,v 1.2 2002/05/04 12:16:44 seemant Exp $
+
+*celestia-1.2.4 (4 May 2002)
+
+  4 May 2002; Seemant Kulleen <seemant@gentoo.org> celestia-1.2.4.ebuild
+  files/digest-celestia-1.2.4 :
+
+  Version bump, which hopefully sorts out compilation errors that were reported
+  by greg@digitalinfo.net (Greg Anuzelli) in bug #2394
 
 *celestia-1.2.2 (13 Apr 2002)
 
