--- a/gnome-extra/gnomemm/ChangeLog
+++ b/gnome-extra/gnomemm/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for gnome-extra/gnomemm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnomemm/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnomemm/ChangeLog,v 1.2 2002/05/04 13:02:11 seemant Exp $
+
+*gnomemm-1.2.2 (4 May 2002)
+
+  4 May 2002; Seemant Kulleen <seemant@gentoo.org> gnomemm-1.2.2-r1.ebuild
+  files/gnomemm-gentoo.patch files/digest-gnomemm-1.2.2-r1 :
+
+  Added the patch submitted by Peter G. MacDonald in bug #2273 which finally
+  lets this thing compile.
 
 *gnomemm-1.2.2 (1 Feb 2002)
 
