--- a/dev-perl/gtk-perl/ChangeLog
+++ b/dev-perl/gtk-perl/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for dev-perl/gtk-perl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl/ChangeLog,v 1.2 2002/05/04 16:00:48 seemant Exp $
+
+*gtk-perl-0.7008-r1 (4 May 2002)
+
+  4 May 2002; Seemant Kulleen <seemant@gentoo.org> gtk-perl-0.7008-r1.ebuild
+  files/digest-gtk-perl-0.7008-r1 :
+
+  The perllocal.pod file was being over-written by every single perl module.
+  To boot, the path in that file was the ${D} path.  So, the path is sed'd out
+  and pkg_postinst() will now append the contents of the module's perllocal.pod
+  file to the end of the system's perllocal.pod file.  Many thanks to
+  porcano@optonline.net (Anthony Porcano) in bug report #2299 for finding this.
+  
 
 *gtk-perl-0.7008 (1 Feb 2002)
 
