--- a/sys-apps/fcron/ChangeLog
+++ b/sys-apps/fcron/ChangeLog
@@ -1,7 +1,13 @@
-# ChangeLog for app-admin/fcron
+# ChangeLog for sys-apps/fcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/ChangeLog,v 1.1 2002/04/20 22:03:25 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/ChangeLog,v 1.2 2002/05/04 17:28:32 bangert Exp $
 
+  4 May 2002; Thilo Bangert <bangert@gentoo.org> frcon-2.0.0-r1.ebuild :
+
+  added LICENSE - lintoolize
+
+
+*fcron-2.0.0-r1 (20 Apr 2002)
 
   20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/fcron.rc6 :
 
