--- a/net-print/hp-web-jetadmin/ChangeLog
+++ b/net-print/hp-web-jetadmin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-print/hp-web-jetadmin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-print/hp-web-jetadmin/ChangeLog,v 1.1 2002/02/01 21:53:36 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/hp-web-jetadmin/ChangeLog,v 1.2 2002/05/04 22:45:53 woodchip Exp $
+
+*hp-web-jetadmin-6.5-r2 (4 May 2002)
+
+  4 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Add LICENSE, SLOT.
 
 *hp-web-jetadmin-6.5-r1 (1 Feb 2002)
 
