--- a/net-print/lprng/ChangeLog
+++ b/net-print/lprng/ChangeLog
@@ -1,20 +1,14 @@
-# ChangeLog for net-print/gimp-print-cups
+# ChangeLog for net-print/lprng
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-print/gimp-print-cups/ChangeLog,v 1.3 2002/05/04 22:45:53 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/lprng/ChangeLog,v 1.1 2002/05/04 22:45:53 woodchip Exp $
 
-*gimp-print-cups-4.2.0-r1 (4 May 2002)
+*lprng-3.8.10 (4 May 2002)
 
   4 May 2002; Donny Davies <woodchip@gentoo.org> :
 
-  Added LICENSE, SLOT.
+  Update to latest, Added LICENSE, SLOT, $Headers, remove CAPS for lower case.
 
-*gimp-print-cups-4.2.0 (13 Apr 2002)
-
-  13 Apr 2002; Seemant Kulleen <seemant@gentoo.org> :
-
-  Unzip html documentation.
-
-*gimp-print-cups-4.2.0 (1 Feb 2002)
+*LPRng-3.8.4 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
