--- a/net-www/mod_dav/ChangeLog
+++ b/net-www/mod_dav/ChangeLog
@@ -1,8 +1,14 @@
-# ChangeLog for net-www/mod_gzip
+# ChangeLog for net-www/mod_dav
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_dav/ChangeLog,v 1.1 2002/04/09 23:57:52 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_dav/ChangeLog,v 1.2 2002/05/04 23:23:01 woodchip Exp $
 
-*mod_gzip-1.3.19.1a (9 Apr 2002)
+*mod_dav-1.0.3-r1 (4 May 2002)
+  
+  4 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Added LICENSE, SLOT, clarify the pkg_postinst message.
+
+*mod_dav-1.0.3 (9 Apr 2002)
 
   9 Apr 2002; Donny Davies <woodchip@gentoo.org> :
 
