--- a/net-www/mod_mp3/ChangeLog
+++ b/net-www/mod_mp3/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_mp3
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_mp3/ChangeLog,v 1.1 2002/04/09 23:57:52 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_mp3/ChangeLog,v 1.2 2002/05/04 23:23:02 woodchip Exp $
+
+*mod_mp3-0.35-r1 (4 May 2002)
+  
+  4 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Added LICENSE, SLOT, clarify the pkg_postinst message.
 
 *mod_mp3-0.35 (9 Apr 2002)
 
