--- a/net-analyzer/lcrzoex/ChangeLog
+++ b/net-analyzer/lcrzoex/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/lcrzoex
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/lcrzoex/ChangeLog,v 1.7 2002/05/04 03:16:38 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/lcrzoex/ChangeLog,v 1.8 2002/05/05 02:25:03 woodchip Exp $
+
+*lcrzoex-4.09-r2 (4 May 2002)
+  
+  4 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Ooops fix #2450.  Thanks Ilian Zarov ;)
 
 *lcrzoex-4.09-r1 (3 May 2002)
   
@@ -19,11 +25,3 @@
 *lcrzoex-4.05 (24 Feb 2002)
 
 *lcrzoex-4.03 (1 Feb 2002)
-
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
