--- a/sys-devel/perl/ChangeLog
+++ b/sys-devel/perl/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for sys-devel/perl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/perl/ChangeLog,v 1.2 2002/03/21 11:26:54 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/perl/ChangeLog,v 1.3 2002/05/05 10:56:53 seemant Exp $
+
+*perl-5.6.1-r3 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org> perl-5.6.1-r4.ebuild
+  files/digest-perl-5.6.1-r4 :
+
+  Added an eclass called perl-post.eclass, which this ebuild now inherits,
+  so that the .pod file in ${libarchdir} gets updated cleanly with
+  emerging and unmerging.
 
 *perl-5.6.1-r3 (21 Mar 2002)
 
