--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.11 2002/05/04 10:03:13 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.12 2002/05/05 12:01:52 danarmak Exp $
+
+  5 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  Don't abort when creating the emptydir if it already exists; use mkdir -p.
 
 *kdebase-3.0-r3 (4 May 2002)
 
