--- a/x11-libs/qt/ChangeLog
+++ b/x11-libs/qt/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/qt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.11 2002/04/30 20:38:57 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.12 2002/05/05 12:03:51 danarmak Exp $
+
+*qt-3.0.3 (5 May 2002)
+
+  5 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+
+  qt-3.0.4 (bugfix release).
 
   30 Apr 2002; Dan Armak <danarmak@gentoo.org> changelog:
   Fix SRC_URI (but why'd it broke??)
