--- a/dev-perl/DB_File/ChangeLog
+++ b/dev-perl/DB_File/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/DB_File
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DB_File/ChangeLog,v 1.1 2002/02/01 21:53:27 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DB_File/ChangeLog,v 1.2 2002/05/05 16:02:26 seemant Exp $
+
+*DB_File-1.8003 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org> DB_File-1.8003.ebuild
+  files/digest-DB_Files-1.8003 :
+
+  Version bump and conversion to eclasses.
 
 *DB_File-1.76 (1 Feb 2002)
 
