--- a/dev-perl/Digest-MD5/ChangeLog
+++ b/dev-perl/Digest-MD5/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Digest-MD5
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Digest-MD5/ChangeLog,v 1.2 2002/04/28 04:02:38 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Digest-MD5/ChangeLog,v 1.3 2002/05/05 16:02:26 seemant Exp $
+
+*Digest-MD5-2.17-r1 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org> Digest-MD5-2.17-r1.ebuild
+  files/digest-Digest-MD5-2.17-r1 :
+
+  Conversion to eclasses.
 
 *Digest-MD5-2.17 (27 Apr 2002)
 
