--- a/app-sci/kstars/ChangeLog
+++ b/app-sci/kstars/ChangeLog
@@ -1,8 +1,14 @@
-# ChangeLog for app-misc/moldy
+# ChangeLog for app-misc/kstars
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/moldy/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/kstars/ChangeLog,v 1.1 2002/05/07 01:57:35 george Exp $
 
-*moldy-2.16e (1 Feb 2002)
+*kstars-0.6-r1 (3 May 2002)
+
+  3 May 2002; Donny Davies <woodchip@gentoo.org> :
+  
+  Add LICENSE, SLOT.
+
+*kstars-0.6-r1 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
