--- a/app-sci/scigraphica/ChangeLog
+++ b/app-sci/scigraphica/ChangeLog
@@ -1,8 +1,8 @@
-# ChangeLog for app-misc/units
+# ChangeLog for app-misc/scigraphica
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/units/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/scigraphica/ChangeLog,v 1.1 2002/05/07 01:57:35 george Exp $
 
-*units-1.74 (1 Feb 2002)
+*scigraphica-0.8.0 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
