moved app-misc/{babel,netcdf} and dev-lang/{iverilog,octave} into app-sci

--- a/app-sci/octave/ChangeLog
+++ b/app-sci/octave/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/octave/ChangeLog,v 1.1 2002/02/19 19:15:14 tod Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/octave/ChangeLog,v 1.1 2002/05/08 02:04:28 george Exp $
 
 *octave-2.0.16 (19 Feb 2002)
 
