--- a/app-sci/babel/ChangeLog
+++ b/app-sci/babel/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for app-misc/babel
+# ChangeLog for app-sci/babel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/babel/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/babel/ChangeLog,v 1.1 2002/05/08 02:04:28 george Exp $
 
 *babel-1.6 (1 Feb 2002)
 
