--- a/app-sci/iverilog/Changelog
+++ b/app-sci/iverilog/Changelog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-lang/icarus_verilog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/iverilog/Changelog,v 1.1 2002/04/04 03:56:03 chadh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/iverilog/Changelog,v 1.1 2002/05/08 02:04:28 george Exp $
 
 *icarus_verilog-0.6.1 (4/3/2002)
 
