--- a/app-sci/netcdf/ChangeLog
+++ b/app-sci/netcdf/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for app-misc/netcdf
+# ChangeLog for app-sci/netcdf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/netcdf/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/netcdf/ChangeLog,v 1.1 2002/05/08 02:04:28 george Exp $
 
 *netcdf-3.5.0-r1 (1 Feb 2002)
 
