sourceofge mirror fix

--- a/app-crypt/cryptoapi/ChangeLog
+++ b/app-crypt/cryptoapi/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for app-crypt/cryptoapi
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/cryptoapi/ChangeLog,v 1.4 2002/05/08 05:52:52 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/cryptoapi/ChangeLog,v 1.5 2002/05/08 08:57:36 spider Exp $
 
+*cryptoapi-2.4.7.0 (7 May 2002)
+  7 May 2002; Spider <spider@gentoo.org> cryptoapi-2.4.7.0.ebuild :
+  fix sourceforge mirroring.
+      
 *cryptoapi-2.4.7.0 (25 Apr 2002)
 
   7 May 2002; Ryan Phillips <rphillips@gentoo.org> cryptoapi-2.4.7.0.ebuild :
