--- a/sys-apps/pbbuttonsd/Changelog
+++ b/sys-apps/pbbuttonsd/Changelog
@@ -1,5 +1,6 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.2 2002/05/09 15:30:32 daybird Exp $
 
 *pbbuttons-0.4.9-r1 (Wed May 8 23:28:00 2002 EST); daybird <daybird@gentoo.org>:
 
